--- a/src/app/detail-user/detail-user.component.html
+++ b/src/app/detail-user/detail-user.component.html
@@ -1,1 +1,8 @@
-<p>Bienvenue vous êtes connecté avec l'e-mail : {{firstname}}</p>
+
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            <p>Bienvenue vous êtes connecté avec l'e-mail : {{firstname}}</p>
+        </div>
+    </div>
+</div>
