--- a/src/app/user/sign-up/sign-up.component.html
+++ b/src/app/user/sign-up/sign-up.component.html
@@ -1,13 +1,21 @@
-<form class="col s12 white" #userRegistrationForm="ngForm" (ngSubmit)="OnSubmit(userRegistrationForm)">
- 
+<div style="text-align: center;" *ngIf="isLoading">
+  <app-loading-spinner></app-loading-spinner>
+</div>
+
+<form class="col s12 white" #userRegistrationForm="ngForm" (ngSubmit)="OnSubmit(userRegistrationForm)" *ngIf="!isLoading">
+  <div  *ngIf="erreur" class="red-text center error-message">
+    <i class="material-icons">error</i> {{erreur}}
+</div>
   <div class="row">
     <div class="input-field col s12">
       <input class="validate" type="text" name="Email" #Email="ngModel" [(ngModel)]="user.Email" [pattern]="emailPattern">
       <label data-error="Invalid email!">Email</label>
+    
     </div>
     <div class="input-field col s12">
       <input class="validate" type="password" name="Password" #Password="ngModel" [(ngModel)]="user.Password" required minlength="6">
       <label [attr.data-error]="Password.errors!=null?(Password.errors.required?'Required field!':'Minimum 6 characters needed'):''">Password</label>
+     
     </div>
  
   </div>
