--- a/src/app/detail-user/detail-user.component.html
+++ b/src/app/detail-user/detail-user.component.html
@@ -4,5 +4,8 @@
         <div class="col-sm-12">
             <p>Bienvenue vous êtes connecté avec l'e-mail : {{firstname}}</p>
         </div>
+        <div class="col-sm-12">
+<button class="btn btn-delete" (click)="logOut()">Déconnecté</button>
+        </div>
     </div>
 </div>
