--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -7,7 +7,9 @@
             <li class="tab">
               <a routerLink='/login' routerLinkActive='active'>Sign In</a>
             </li>
-           
+            <li class="tab">
+              <a  routerLink='/signup' routerLinkActive='active'>Sign Up</a>
+            </li>
           </ul>
         </div>
         <div class="card-content white">
