--- a/src/app/user/sign-up/sign-up.component.html
+++ b/src/app/user/sign-up/sign-up.component.html
@@ -1,3 +1,12 @@
+<div class="container" style="margin-top: 50px;">
+  <div class="row">
+      <div class="col-md-8 mx-auto">
+          <div >
+              <div class="header">
+                  <h3>Inscription</h3>
+              </div>
+              <div class="card-body">
+
 <div style="text-align: center;" *ngIf="isLoading">
   <app-loading-spinner></app-loading-spinner>
 </div>
@@ -26,3 +35,5 @@
     </div>
   </div>
 </form>
+<a class="right" routerLink='/login' routerLinkActive='active'>Se connecter</a>
+</div>
