--- a/src/app/user/sign-in/sign-in.component.html
+++ b/src/app/user/sign-in/sign-in.component.html
@@ -1,22 +1,34 @@
-<div *ngIf="isLoginError" class="red-text center error-message">
-    <i class="material-icons">error</i> Incorrect username or password
-</div>
-<form #loginForm="ngForm" class="col s12 white" (ngSubmit)="OnSubmit(UserName.value,Password.value)">
-   <div class="row">
-     <div class="input-field col s12">
-       <i class="material-icons prefix">account_circle</i>
-       <input type="text" #UserName ngModel name="UserName" placeholder="Username" required>
-     </div>
-   </div>
-   <div class="row">
-      <div class="input-field col s12">
-        <i class="material-icons prefix">vpn_key</i>
-        <input type="password" #Password ngModel name="Password" placeholder="Password" required>
-      </div>
+<div class="signin-content">
+  <mat-card>
+    <mat-card-title>Login</mat-card-title>
+    <mat-card-content>
+      <div *ngIf="isLoginError" class="red-text center error-message col-sm-12">
+        <i class="material-icons">error</i> Incorrect username or password
     </div>
-    <div class="row">
-        <div class="input-field col s12">
-          <button [disabled]="!loginForm.valid" class="btn-large btn-submit" type="submit">Login</button>
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+       
+        <div class="row">
+          <div class="input-field col s12">
+            <i class="material-icons prefix">account_circle</i>
+            <input type="text"  formControlName="userName" placeholder="userName" required>
+          </div>
         </div>
-      </div>
-</form>
+        <div class="row">
+          <div class="input-field col s12">
+            <i class="material-icons prefix">vpn_key</i>
+            <input type="password"  formControlName="password" placeholder="Password" required>
+          </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
+              <button  class="btn-large btn-submit">Login</button>
+            </div>
+          </div>
+      </form>
+    </mat-card-content>
+    <div class="row">
+      <p>Vous n'avez pas un compte ?</p> <a  routerLink='/signup' routerLinkActive='active'>s'enregistrer</a>
+    </div>
+  </mat-card>
+  
+</div>
