--- a/src/app/user/sign-up/sign-up.component.html
+++ b/src/app/user/sign-up/sign-up.component.html
@@ -31,7 +31,7 @@
   
   <div class="row">
     <div class="input-field col s12">
-      <button [disabled]="!userRegistrationForm.valid" class="btn-large btn-submit" type="submit">Submit</button>
+      <button [disabled]="!userRegistrationForm.valid" class="btn-large btn-submit" type="submit">Enregistrer</button>
     </div>
   </div>
 </form>
