--- a/src/app/user/sign-up/sign-up.component.html
+++ b/src/app/user/sign-up/sign-up.component.html
@@ -35,5 +35,5 @@
     </div>
   </div>
 </form>
-<a class="right" routerLink='/login' routerLinkActive='active'>Se connecter</a>
+<p>Avez-vous un compte ? <a  routerLink='/login' routerLinkActive='active'>Se connecter</a></p>
 </div>
