--- a/src/app/user/sign-in/sign-in.component.html
+++ b/src/app/user/sign-in/sign-in.component.html
@@ -15,17 +15,23 @@
           <div class="input-field col s12">
             <i class="material-icons prefix">account_circle</i>
             <input type="text"  formControlName="userName" placeholder="Email" required>
+            <mat-error *ngIf="isFieldInvalid('userName')">
+              L'email est requis.
+            </mat-error>
           </div>
         </div>
         <div class="row">
           <div class="input-field col s12">
             <i class="material-icons prefix">vpn_key</i>
             <input type="password"  formControlName="password" placeholder="Mot de passe" required>
+            <mat-error  *ngIf="isFieldInvalid('password')">
+              Le mot de passe est requis.
+            </mat-error>
           </div>
         </div>
         <div class="row">
             <div class="input-field col s12 ">
-              <button  class="btn-large btn-submit">Se connecter</button>
+              <button [disabled]="!form.valid" class="btn-large btn-submit">Se connecter</button>
             </div>
           </div>
       </form>
