--- a/src/app/user/sign-up/sign-up.component.html
+++ b/src/app/user/sign-up/sign-up.component.html
@@ -1,3 +1,4 @@
+
 <div class="container" style="margin-top: 50px;">
   <div class="row">
       <div class="col-md-8 mx-auto">
@@ -10,10 +11,22 @@
 <div style="text-align: center;" *ngIf="isLoading">
   <app-loading-spinner></app-loading-spinner>
 </div>
-
 <form class="col s12 white" #userRegistrationForm="ngForm" (ngSubmit)="OnSubmit(userRegistrationForm)" *ngIf="!isLoading">
   <div  *ngIf="erreur" class="red-text center error-message">
     <i class="material-icons">error</i> {{erreur}}
+</div>
+<div class="row">
+  <div class="input-field col s12">
+    <input class="validate" type="text" name="firstname" #FirstName="ngModel" [(ngModel)]="user.FirstName" required >
+    <label data-error="Le prénom est réquis">Prénom</label>
+  </div>
+  
+</div>
+<div class="row">
+  <div class="input-field col s12">
+    <input class="validate" type="text" name="firstname" #LastName="ngModel" [(ngModel)]="user.LastName" required >
+    <label data-error="Le nom est réquis">Nom</label>
+  </div>
 </div>
   <div class="row">
     <div class="input-field col s12">
@@ -21,17 +34,38 @@
       <label data-error="Invalid email!">Email</label>
     
     </div>
-    <div class="input-field col s12">
-      <input class="validate" type="password" name="Password" #Password="ngModel" [(ngModel)]="user.Password" required minlength="6">
-      <label [attr.data-error]="Password.errors!=null?(Password.errors.required?'Required field!':'Minimum 6 characters needed'):''">Password</label>
-     
-    </div>
- 
+    
   </div>
-  
   <div class="row">
     <div class="input-field col s12">
-      <button [disabled]="!userRegistrationForm.valid" class="btn-large btn-submit" type="submit">Enregistrer</button>
+      <input class="validate" type="password" name="Password" #Password="ngModel" [(ngModel)]="user.Password" required minlength="6">
+      <label [attr.data-error]="Password.errors!=null?(Password.errors.required?'Required field!':'Minimum 6 characters needed'):''">Password</label>    
+    </div>
+  </div>
+  <div class="row form-group">
+
+    <div class="col-sm-s6">
+      <span>Sexe</span><br>  
+      <mat-radio-group name="sexe" required [(ngModel)]="user.Sexe">
+        <mat-radio-button style="margin-right: 15px;"   [value]="male">Homme </mat-radio-button>
+        <mat-radio-button  [value]="female">Femme</mat-radio-button>
+      </mat-radio-group>
+      
+    </div>
+  </div>
+  <div class="row">
+ <div class="col-sm-s6">
+  <span>Type de compte</span><br>  
+  <mat-radio-group name="type" required [(ngModel)]="user.Type">
+    <mat-radio-button style="margin-right: 15px;"   [value]="prof">Professeur </mat-radio-button>
+    <mat-radio-button  [value]="etu">Étudiant(e)</mat-radio-button>
+  </mat-radio-group>
+ </div>
+
+</div>
+  <div class="row">
+    <div class="input-field col s3">
+      <button [disabled]="!userRegistrationForm.valid" class="btn btn-submit" type="submit">Enregistrer</button>
     </div>
   </div>
 </form>
