--- a/src/app/user/sign-up/sign-up.component.html
+++ b/src/app/user/sign-up/sign-up.component.html
@@ -31,16 +31,27 @@
   <div class="row">
     <div class="input-field col s12">
       <input class="validate" type="text" name="Email" #Email="ngModel" [(ngModel)]="user.Email" [pattern]="emailPattern">
-      <label data-error="Invalid email!">Email</label>
+      <label data-error="Email invalide!">Email</label>
     
     </div>
     
   </div>
   <div class="row">
-    <div class="input-field col s12">
-      <input class="validate" type="password" name="Password" #Password="ngModel" [(ngModel)]="user.Password" required minlength="6">
-      <label [attr.data-error]="Password.errors!=null?(Password.errors.required?'Required field!':'Minimum 6 characters needed'):''">Password</label>    
-    </div>
+    <div class="input-field col s12">    
+      <input class="validate" type="password" minlength="6" name="password" [ngModel]="user.Password"  required #password="ngModel" renverse="true" >
+      <label [attr.data-error]="password.errors!=null?(password.errors.required?'Required field!':'Minimum 6 characters needed'):''">Password</label>    
+   
+  </div>
+  </div>
+  <div class="row">
+  <div class="input-field col s12">
+      <label>Confirmé mot de passe</label>
+      <input type="password" name="confirmPassword" [ngModel]="user.ConfirmPassword"  required validateEqual="password" #confirmPassword="ngModel">
+     
+      <small [hidden]="confirmPassword.valid ||  (confirmPassword.pristine && !userRegistrationForm.submitted)">
+          Mots de passes differents
+      </small>
+  </div>
   </div>
   <div class="row form-group">
 
