--- a/src/app/user/sign-up/sign-up.component.html
+++ b/src/app/user/sign-up/sign-up.component.html
@@ -4,7 +4,7 @@
       <div class="col-md-8 mx-auto">
           <div >
               <div class="header">
-                  <h3>Inscription</h3>
+                  <h1>Nouvelle inscription</h1>
               </div>
               <div class="card-body">
 
