--- a/src/app/user/sign-in/sign-in.component.html
+++ b/src/app/user/sign-in/sign-in.component.html
@@ -38,7 +38,7 @@
     </mat-card-content>
     <div class="row">
       <p>Vous n'avez pas un compte ?</p> <a  routerLink='/signup' routerLinkActive='active'>s'enregistrer</a>
-      <p>Mot de passe oublié ?</p> <a  routerLink='/password' routerLinkActive='active'>changer mot de passe</a>
+      <p>Mot de passe oublié ?</p> <a  routerLink='/changepassword' routerLinkActive='active'>changer mot de passe</a>
     </div>
   </mat-card>
   
