--- a/src/app/user/profile/profile.component.html
+++ b/src/app/user/profile/profile.component.html
@@ -4,9 +4,9 @@
         <div class="col-sm-12" >
             <br/>
             <h3>Profile</h3>
-              <label >Prénom :</label>  <p name="firstname">{{user.firstname}}</p>
-              <label style="font-size: large;" for="name">Nom :</label>  <p name="name">{{user.lastname}}</p>
-              <label style="font-size: large;" for="email">Email :</label>  <p name="email">{{user.email}}</p>
+              <label >Prénom :</label>  <p name="firstname">{{user.FirstName}}</p>
+              <label style="font-size: large;" for="name">Nom :</label>  <p name="name">{{user.LastName}}</p>
+              <label style="font-size: large;" for="email">Email :</label>  <p name="email">{{user.Email}}</p>
             
            
         </div>
