--- a/src/app/user/sign-up/sign-up.component.html
+++ b/src/app/user/sign-up/sign-up.component.html
@@ -38,15 +38,15 @@
   </div>
   <div class="row">
     <div class="input-field col s12">    
-      <input class="validate" type="password" minlength="6" name="password" [ngModel]="user.Password"  required #password="ngModel" renverse="true" >
-      <label [attr.data-error]="password.errors!=null?(password.errors.required?'Required field!':'Minimum 6 characters needed'):''">Password</label>    
+      <input class="validate" type="password" minlength="6" name="Password" [ngModel]="user.Password"  required #Password="ngModel" renverse="true" >
+      <label [attr.data-error]="Password.errors!=null?(Password.errors.required?'Required field!':'Minimum 6 characters needed'):''">Password</label>    
    
   </div>
   </div>
   <div class="row">
   <div class="input-field col s12">
       <label>Confirmé mot de passe</label>
-      <input type="password" name="confirmPassword" [ngModel]="user.ConfirmPassword"  required validateEqual="password" #confirmPassword="ngModel">
+      <input type="password" name="confirmPassword" [ngModel]="user.ConfirmPassword"  required validateEqual="Password" #confirmPassword="ngModel">
      
       <small [hidden]="confirmPassword.valid ||  (confirmPassword.pristine && !userRegistrationForm.submitted)">
           Mots de passes differents
